design: Add right align to notice dropdown - fix badge position style - add right align for only desktop

--- a/osp/static/css/base.css
+++ b/osp/static/css/base.css
@@ -89,7 +89,13 @@ div.vr {
 .noti-dropdown {
   padding: 0;
 }
-
+@media (min-width: 991px) {
+  .noti-dropdown {
+    padding: 0;
+    left:auto !important;
+    right: 0 !important;
+  }
+}
 .noti-item {
   width: 20em;
   padding-left: 0.5em;
@@ -112,28 +118,14 @@ div.vr {
   color: var(--main-border-color);
 }
 
-#new-noti {
+#new-noti, #new-msg  {
   background-color: var(--alert-color);
   border-radius: 50%;
   padding: 0.25rem;
-  position: relative;
-  top: -10px;
-  /*top: -1rem;*/
-  left: 8px;
-  /*left: 0.5rem;*/
+  position: absolute;
+  left: -5px;
   height: 0.5rem;
   width: 0.5rem;
-}
-
-#new-msg {
-  background-color: var(--alert-color);
-  border-radius: 50%;
-  padding: 0.25rem;
-  position: relative;
-  /*top: -1rem;*/
-  top: -12px;
-  /*left: 0.5rem;*/
-  left: 8px;
 }
 
 #message-modal .modal-dialog,
